# campus-announcement-scraper

./: .env.example  .gitignore  README.md  docker-compose.yml  init.sql  pyproject.toml  test.http
app/: main.py
app/core/: config.py  database.py
app/core/clients/: __init__.py  rate_limited.py  retryable.py
app/models/: announcement.py  origin.py
app/schemas/: scrape.py  webhook.py
app/scrapers/: base.py  common.py  scholar.py
app/services/: scraper_service.py
